# pyRedNoise

./: .gitignore  LICENSE  README.md  RedNoiseAnalysis.py  chunk_power_spectrum.py  pyproject.toml  red_noise.py
pyRedNoise/: RedNoiseAnalysis.py  chunk_power_spectrum.py  red_noise.py
src/: RedNoiseAnalysis.py
tests/: fixture.py  rmm.79to21.txt  rmm.npy  test_RedNoiseAnalysis.py  test_chunk_power_spectrum.py  test_red_noise.py
