[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyRedNoise"]

[project]
name = "pyRedNoise"
version = "0.0.1"
authors = [
  { name="brownian.motion.99", email="chunhaoc777@gmail.com" },
]
description = "A package performing power spectrum analysis, and comparing the given signal with red noise"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
]

[project.urls]
Homepage = "https://github.com/Prcpltwfkwd-TW/pyRedNoise.git"
Issues = "https://github.com/Prcpltwfkwd-TW/pyRedNoise/issues"